# meta-par

./: .gitignore  HOWTO.md  Makefile  Persistence-HOWTO.md  README.md  monad-par.cabal
Control/Monad/: Par.hs
Control/Monad/Par/: Class.hs  DistTrace.hs  Meta.hs
Control/Monad/Par/Meta/Resources/: Accelerate.hs  CUDAMergeSort.hs  Remote.hs  SharedMemory.hs
Control/Monad/Par/Scheds/: Direct.hs  DistDirect.hs  Trace.hs  TraceInternal.hs
examples/: Makefile  README.md  benchmark.hs  common.mk  parfib_dist.hs
examples/distributed/: builddist.sh  parfib_dist.hs  test.sh  testdist.sh
experimental/: README.txt  putPath.hs
meta-par-accelerate/Control/Monad/Par/Meta/: AccSMP.hs
meta-par/Control/Monad/Par/: Meta.hs
results/: perflog.txt
tests/network_microbench/: CloudHaskell-Microbench.hs  hs_cassandra_microbench.hs  hs_cassandra_microbench2.hs
